# MyLearning

./: .gitignore
ControlStructure/ControlStructure/: main.swift
ControlStructure/ControlStructure.xcodeproj/: project.pbxproj
ControlStructure/ControlStructure.xcodeproj/project.xcworkspace/xcuserdata/alexandr.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
ControlStructure/ControlStructure.xcodeproj/xcuserdata/alexandr.xcuserdatad/xcschemes/: xcschememanagement.plist
LearnSwift/ExerciseFirst/ExerciseFirst/: main.swift
LearnSwift/ExerciseFirst/ExerciseFirst.xcodeproj/: project.pbxproj
LearnSwift/ExerciseFirst/ExerciseFirst.xcodeproj/project.xcworkspace/xcuserdata/alexandr.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
LearnSwift/ExerciseFirst/ExerciseFirst.xcodeproj/xcuserdata/alexandr.xcuserdatad/xcschemes/: xcschememanagement.plist
LearnSwift/Function/Function/: main.swift
LearnSwift/Function/Function.xcodeproj/: project.pbxproj
Win32API/MainWindow/: MainWindow.sln
Win32API/MainWindow/MainWindow/: MainWindow.cpp  MainWindow.vcxproj  MainWindow.vcxproj.filters  MessageBox.cpp
Win32API/VulkanAPILearn/: CMakeLists.txt
Win32API/VulkanAPILearn/VulkanAPILearn/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  VulkanAPILearn.cpp  VulkanAPILearn.h  WndProc.hpp
Win32API/VulkanGLFW/: VulkanGLFW.sln
Win32API/VulkanGLFW/VulkanGLFW/: HelloTriangle.cpp  VulkanGLFW.vcxproj  VulkanGLFW.vcxproj.filters
(+2 files in other folders)
